5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1752_3093.log
== TEST (2019-05-16 17:17:17) 
-- CODE:
resultado = input("Resultado da partida: ").lower()

V = 3
E = 1
D = 0

while (resultado == "V" or "E" or "D"):
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:21) 
-- CODE:
resultado = input("Resultado da partida: ").lower()

V = 3
E = 1
D = 0
cont = 0

while (resultado != "V" or "E" or "D"):
	if (resultado == "V"):
		cont = V
		elif (resultado == "E"):
			cont = E
		elif (resultado == "D"):
			cont = D
			
print(cont + cont)
		
	
	

-- ERROR:
File "XXXX", line 11
    elif (resultado == "E"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
